# ChangeLog for sys-devel/gcc
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/gcc/ChangeLog,v 1.917 2012/12/11 17:39:13 ago Exp $

  11 Dec 2012; Agostino Sarubbo <ago@gentoo.org> gcc-4.4.7.ebuild,
  gcc-4.5.4.ebuild:
  Stable for ia64, wrt bug #431878

  29 Nov 2012; Mike Frysinger <vapier@gentoo.org> gcc-4.1.2.ebuild,
  gcc-4.2.4.ebuild:
  Fix building with glibc-2.16 #424970 by Chris Smith.

  25 Nov 2012; Mike Frysinger <vapier@gentoo.org> gcc-4.6.3.ebuild:
  Push out fixes from upstream for #439432 and 439988.

  25 Nov 2012; Mike Frysinger <vapier@gentoo.org> gcc-4.3.6-r1.ebuild,
  gcc-4.4.7.ebuild:
  Push out accumulated backports.

  24 Nov 2012; Mike Frysinger <vapier@gentoo.org> gcc-2.95.3-r10.ebuild,
  gcc-2.95.3-r9.ebuild, gcc-3.1.1-r2.ebuild, gcc-3.2.2.ebuild,
  gcc-3.2.3-r4.ebuild, gcc-3.3.6-r1.ebuild, gcc-3.4.6-r2.ebuild,
  gcc-4.0.4.ebuild, gcc-4.1.2.ebuild, gcc-4.2.4-r1.ebuild, gcc-4.3.3-r2.ebuild,
  gcc-4.3.4.ebuild, gcc-4.3.5.ebuild, gcc-4.3.6-r1.ebuild, gcc-4.4.2.ebuild,
  gcc-4.4.3-r3.ebuild, gcc-4.4.4-r2.ebuild, gcc-4.4.5.ebuild,
  gcc-4.4.6-r1.ebuild, gcc-4.4.7.ebuild, gcc-4.5.1-r1.ebuild, gcc-4.5.2.ebuild,
  gcc-4.5.3-r2.ebuild, gcc-4.5.4.ebuild, gcc-4.6.0.ebuild, gcc-4.6.1-r1.ebuild,
  gcc-4.6.2.ebuild, gcc-4.6.3.ebuild, gcc-4.7.0.ebuild, gcc-4.7.1.ebuild,
  gcc-4.7.2.ebuild:
  Move xlibs gcj dep to the eclass.

  05 Nov 2012; Ryan Hill <dirtyepic@gentoo.org> gcc-4.7.2.ebuild:
  Patchset 1.3. Backport patches to ignore always_inline attribute on redefined
  extern inline functions (bug #423945 and #435002) and preserve user alignment
  on user defined sections (among other things fixes glibc build on PPC).

  21 Oct 2012; Mike Frysinger <vapier@gentoo.org> gcc-4.7.1.ebuild,
  gcc-4.7.2.ebuild:
  Make sure gfortran respects sysroot #433435 by Andrew Aladjev.

  06 Oct 2012; Magnus Granberg <zorry@gentoo.org> gcc-4.7.2.ebuild:
  Bump the piepatchset to 0.5.5
