@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX 3.2.1/gcc31-loop-load-final-value.patch 3324 SHA256 70aa8433fb19c95f334b6cbc155cae22a3b61a6892ed9e18f95860509d0091a8 SHA512 99a4a598f4bbd959d44ea8e8da93c6ec9b031347176e863aa1e236c9e6ce4a2ac094d55812749a1fbbd810555e159762400c6e2965881d11bccd7cfafd586301 WHIRLPOOL 7b72a682095c86afcc0698b79def8d90048ab32a80348bd8d1712bcc95bbb007356b2ef19f5e5b075ad6504c4220ac1c9e5a4cfabb9e8c79a2ba14332b1ae36c
 AUX 3.2.1/gcc32-arm-disable-mathf.patch 2229 SHA256 808368680a4635cdf46844e63342a8ca387769b2323ef99f90530d3bbc622587 SHA512 85f5e573e7c44d136dd69a4268e3dfde4cd99514a709c93fe3bb02144b566b991f5df747d02b4dfcbeefd1257b478109896b5f3b01ab04f90c195961244f3ceb WHIRLPOOL 6e7cae4c114d095d9270beb30a8daaded6e454c447102928965a09ea326e243c1fee6be9997b6b08d2db19b230fc2e0140b6ae67709e214d99ca1669167ac4f5
 AUX 3.2.1/gcc32-arm-reload1-fix.patch 932 SHA256 d1158fa35b98cf72565e9b12cfd3f92a1eb14f0abfc5bf86d5990792cf1fefc3 SHA512 047fa3972174ac73f8aab876530658adf05d66d95e5d11cf42ab4dd012e455cd8ee5b904d839717b129af6a8ba0fb033c64fd369e0d0a84c6beb95baf011d0ab WHIRLPOOL 09e73ab4aadbcb000d69f62ed4127ec9b84861924947fd2aef7cf2a80104cde64c41593e6f7aa4d0ad2accaca8a5b2f1d4329cdca4388aad58494d4ec5c9553f
@@ -131,7 +134,7 @@ DIST gcc-4.5.3-patches-1.6.tar.bz2 25116 SHA256 29546f2b3be770aba3b3591e1076705d
 DIST gcc-4.5.3-piepatches-v0.4.7.tar.bz2 14638 SHA256 fe3414a85b6b0a1e4ff758c008bbefc7411148ccb9af70cb1a0af179eba55a32 SHA512 e3cebb6caa67a949ec8e2a129ee2fb53e4f04549891d8522756c3f123495169d37328dc25c5f12ba79a530d79b422e95b2e8423301c1c521463da7ddabc1240e WHIRLPOOL 4b01a6c8099bc26ed197e8ba1236dbe1327777033a025c269976ac6a218a12a47b7e333356ace3727852b0b58d4e26e33b68538cbf591dca325376ccad45c410
 DIST gcc-4.5.3-uclibc-patches-1.0.tar.bz2 3015 SHA256 7ddb8ac57b42c0de07a9afb3338c05d884da3c606f80cf21ee767f9c4682e3f6 SHA512 dee229ab53968cd1b6eab3040dcb64d145d194bc55eb0599036192e27cfb6001db857f3a0baac9a31edd6df57941c59b6323f5a533bf834a5ca4288f84cc911c WHIRLPOOL c1579263965b6b05e075e6064afb716f3d60c39ff7e7cd10e05639312c789c7498a39d89fd05962788d2be14331d53d2f8a8c29745d263921021144cb39b86dc
 DIST gcc-4.5.3.tar.bz2 66374586 SHA256 0a8847af44a9b33813b199997a73139517c96adfd519eaf24c79d4d9d09f65de SHA512 42c03aa0d16a52e95d1857d859ddd0a4923c232b90481ee52b02bc9a3976bc6e5e502e94af3fc76ac054572a420303c47e409c72f816416aeffd74c4bcd443d3 WHIRLPOOL faad2337eaae059cde6a2f42227f29a6c2855e6cbf16894a178e446b7668b7f68e23a7968926473974ec9aff3680cebbebfc01af0a60474ff90cf1fad3e96a11
-DIST gcc-4.5.4-patches-1.0.tar.bz2 21571 SHA256 6b2760ec650597dfe2364f881e2fee101c14344fc4598a3b507437b16109b124 SHA512 bb4b6ec0e8d378db034fc0f8aa7a1683f4801eddbe884916df50c97824a0744cb09e4c79a74c5908ed13254faaa8c685bfde51dc0d64c024557f7dd4ab070d17 WHIRLPOOL 754a9a85ae0f56c78c962159d94e91a75da351fac50f2f5b811158baf142d83c85908f3addd7af32a571aff236aa7a24db242947514010a6964e0b0519cd6f72
+DIST gcc-4.5.4-patches-1.1.tar.bz2 21867 SHA256 6691b3ffb0f684308a23f0db7df1786f07a14bdaa5b7a828a0337c780fcb958e SHA512 959b458a5f1fda4f8ce2a3826206b3dcaa6b98f860cff9376ab2e8b7d5a924b2d07eda1050153999662cdc64cbfb4de22146e7bab10fa6c0a1f7874443d952f1 WHIRLPOOL 43c687d51cda3a54e0e74f109fbd2f29d041609434500b79ff194f1b67336d3644746cd33d0a1a42c31ed069fb9e83dadc2e0075f9e6a42b0590e63acfd962c1
 DIST gcc-4.5.4-piepatches-v0.4.7.tar.bz2 14636 SHA256 cde859de93194d1ad568932bdd490b47b9bfc6cf82e68d5b67ad117c3079d426 SHA512 2e59910f2919817f168d99406559d9e94978020adbc39d061a03dcbcb4a38635ff3c501d04f84c9e6023812ae1d88f54c22f2f2cf6723a76da2fadb2648e11d8 WHIRLPOOL 10001812c6e6693647465b197ed4738fe52e3c53752a551d646ab9d77ade9dfdf46e4b80ecf4b647ec865168e80c4a0bf350659b3ab11251a173179244b44972
 DIST gcc-4.5.4-uclibc-patches-1.0.tar.bz2 3019 SHA256 bcfaac58ee057ca9fdbee9295100379051b3b7df8abdf33f24da6cb3c75b4d20 SHA512 b6aa0a7d029a2a00b36fe8906d76b434fcdfc7191cbc8fffbcb8b89a66eba61ba6cd0cfdba94a79929487fbbad2163083b085476498f8be77ad473d078b0095a WHIRLPOOL f3cae558649cdbce9a7dbf0d006845d88349926d1e3d7a4717f2df5c413a1da236b9e35fe0618844578408825b6130533570146c525525a0df18223b3ebf479f
 DIST gcc-4.5.4.tar.bz2 66426133 SHA256 eef3f0456db8c3d992cbb51d5d32558190bc14f3bc19383dd93acc27acc6befc SHA512 78696b287d46aacd6f150920da376ea32f58ad9f0dafd2d3b7fa6dbdd8dd7afe659108d1dfaa5807617fc5248719f50b39c37ade0173ea5b9fec2091f4656115 WHIRLPOOL 1d3aa5f344171a75144118101bf475536940eeb80f73849827ee4103c52dfb6504d9b26e21fa0984c65c5e6267e02fa6e7f8ef539c44f45470790781080aadca
@@ -147,7 +150,7 @@ DIST gcc-4.6.2-patches-1.5.tar.bz2 17898 SHA256 4564994b8d88b621d8ba4113a0cb71ae
 DIST gcc-4.6.2-piepatches-v0.5.0.tar.bz2 14397 SHA256 19bf8797bb9a999c3396613e28b0fda3bad80a0815ab30ea08bc1c98a8a51b71 SHA512 5f91c05ff3519200f4f55a7adabb805f54209d80515111ac8727c1700f06c1a36f79b2e3d8eecadfbd5a4fe58d75311988635e4b474a920cefab8a24ffb0cf59 WHIRLPOOL ee80c656a312a1c1f2fd0d5ff287559e115a9bdf1c2ee4a6266389f478b4c274ad2b5ff8b558eee71a75c6e0141fc053c0d04336742c7f14102c0d2436480893
 DIST gcc-4.6.2-uclibc-patches-1.0.tar.bz2 3019 SHA256 25e902a6d2db7181394df5ad11fafaad064bf28a6ffebd889033f744613ac201 SHA512 b02ce4bd972e80923182b86ff77d9a37b7733985501a9c6f1889d4c77cd0d240ba984d4bd902ba13502fe158b891d313360812f4076044ab58539f2e29930e0e WHIRLPOOL 950bab1bd47d4bf533a618637917449f50d6f9b9bef1b51a9a22248f7d11c1af411d226d57d856ce7736d6d6516345e82ce0fadca18eee68572e1a3af11e4c8b
 DIST gcc-4.6.2.tar.bz2 71995338 SHA256 60b05463dfe18d40d68fb8a71b25b408a01f86cc6ceaf5e6b22238b6b0f450c2 SHA512 51bd123b71b6e4ee4e4b9689a93d328332ea129692f6af2473efdcaedc897a130e4c1948820b3543846d89bb2dd5427b236d2a5d5a6cfa371ba086577f9c0e62 WHIRLPOOL eca8104dbaad1d9682425dd142cbebf3a62a730a1e3d99317f1bd082fb5c0c7fbd0522b3b14f75349618897173fcba79eb82d53718ec8e156bda56f78d1531dd
-DIST gcc-4.6.3-patches-1.8.tar.bz2 19975 SHA256 720d173422eeb4b33d6e2c9043c2c3974fc143f073b673562a025cd884f11298 SHA512 eb30e748226c6288adb128289eb6789915b6939b3e7f912874b9cfe5c52568227c55477625eeaf13533a054c1da880c73345ddd6eebecdb469ae9d334aa401b8 WHIRLPOOL 403184ce4231d2b4ad77936999a3bfeb114d84d8bfd5dcafd0f34c269be92dd69b9b8b0080d448155d6de1e31b4dffb904607401b01669edec7a9ece15ffa4f7
+DIST gcc-4.6.3-patches-1.9.tar.bz2 20439 SHA256 985aa2a7adb15121cb4b2ed7af054a948e6aea882d959d814109078dbc912719 SHA512 d6ac0df52deb3c2c2f2e1bb2354e8fec8ac26a3c6fa15bf47c9cd8424f87faee0646878263ecd489f1fcef1e62896150f82f770792340a0722d72d793f5f5a62 WHIRLPOOL 64238ee4ddba510341bd3fc38bb92a360517b5b1b94754d9430970ec9cf38cf95d907b3c2829043dca00f7c7b9bc26554242717a6e0382370520a7db0d0ba246
 DIST gcc-4.6.3-piepatches-v0.5.2.tar.bz2 15002 SHA256 6606d47a8bbaa9cba0dd3b022cbf6ed14325b8560dd17f7601dbaa4697df3691 SHA512 21ec5bcd43ec0075f8885ef6f567fd9ffd0a64f4c4f9340262900b91a8f22f73a22cd320d6c5a9211083a0a4d21f61ff42e4d9368b5768b395d6ec1b17fc47eb WHIRLPOOL f38666e7c47d9e10b96a22b85c90659800ecfa86d7cf9d5ff69385dc5584fc6ea4b90265ec62d8066adab63a647c1a4bd0f0d1cc69057fcc08c4aa6856cd5766
 DIST gcc-4.6.3-uclibc-patches-1.0.tar.bz2 3023 SHA256 4219a3582c5f98bf8437bfc3feb8c264f8aabd8078caaddef46dd38be33f089f SHA512 e0763dc7f3f94cb9ba6e34233d1a2fa6913918a5100dd029ae76b3b086529b8fafae3086dc22f3294f7d378e5548294264cb2faa80866e8a1ecc666bf60fe010 WHIRLPOOL 1744810d5928b1869929ebd608e1d817e4bcb4f666647bc873e9bdb41c65833a40745e58de5ef4beb98ef4ac539c8560733100a3bbee280c76525ee518ae88c8
 DIST gcc-4.6.3.tar.bz2 71999439 SHA256 e8f5853d4eec2f5ebaf8a72ae4d53c436aacf98153b2499f8635b48c4718a093 SHA512 efedecc1a6d1c36eb91cbecfae9a4414d01051e99965de8a284d1164df3cad13fa99a6dd5a4ceaa03ef63a66884eaf729b49d602ac82088f788bab045ce1eb26 WHIRLPOOL a50059cc5ec5bcf7c7d7108e38087c2168ff0c6817d06b709be901a87007f84cd231ebae0752cdc94fa99c93ecd30ba810d3213aba9f3639292b1e831818ec0c
@@ -188,14 +191,31 @@ EBUILD gcc-4.4.7.ebuild 1639 SHA256 eafac5193bc1ddb5f112e150fa75edd848ab2be769f5
 EBUILD gcc-4.5.1-r1.ebuild 1654 SHA256 29194a8008b0e36b956ab5b56309cafe68684ced9e175dc27ab5de761bcc4c5d SHA512 e38ff75c21dd4197d13cd4ac8f724b0bb2cb26d620b8e4370a32eb574d4c08405edbd2bb8f04552ac1e365852a92ecb50db944e8b46d12563283f20fd790f933 WHIRLPOOL fe5cd29eca03ba6d22755a59e8661f0841fe8f05ff70a48cbc18a6909b1fa607c036f77b75d3754a0534e49b9839968e8e69820dff1bd6900d1fd4adbe2a1392
 EBUILD gcc-4.5.2.ebuild 1651 SHA256 976d156eef8da5258c42a8ad6d40502c97a9b0ec153dfe70d8e0290d79c67312 SHA512 e07e29eb73454feaca9552c1ce4b456a003e58dd90bbb7ed701e544a27889366f9bca8ea0260b8b9178d0a3bd662e80da1e9b338d3846d3419dabd2aa2170588 WHIRLPOOL 4f1c3d46ab382913a4984312f01f477bed334a40c805e0efa358c567788bfb0334fe06856b0f0dda0c3837f12c73052d0a45d058df22f881ec1ae08c9ffc089a
 EBUILD gcc-4.5.3-r2.ebuild 1564 SHA256 2f3e8412c3a3e175c013eaa1f2e7da2af938c4a6e7cafff95f75aa40d29164dc SHA512 3dded9361215bad0ecebf187a47a28ff43a9cf67c0471cc9693985c4acae8bdb585197eeb05a35840d959c321107ed25d1f5fa1cdb17a3e07a4ffc116cdb0e2d WHIRLPOOL d03a1cfc5f37e646f481eaf8eccb71439ae615ecf34428f274f4f7dea20c0a6548624d034a2c1923228a1ffff0fffcffcb733b9ab4d8bb1e0b36612122f632ac
-EBUILD gcc-4.5.4.ebuild 1561 SHA256 6f4eea808110090797704feb0d29a0b1a17c56e0d278a4a6d641bae41a269fd8 SHA512 7320642b553cf3de0adfa1f4f46e61d35be28c6f3fc588f7fb51f8a03eb77fa4478b5d56487f581e242041ec0eb0c84316e4024e084f116909b8a81dcb8d66dd WHIRLPOOL b7ce4cc3097010cb2442b6c332bfab34310622bad35e46191641aca2939c2f2fb8406d3275b2b1cda447c48c45f9f953bdaa735c78828aa54507cd70e3dcb7a3
+EBUILD gcc-4.5.4.ebuild 1564 SHA256 fe403d9654779a5bda3a429d8dfca23c949f7bff7a0f478278ebcd1e68f3e9a6 SHA512 da7a89790b47e87a7b74d38988431a89ebf068429bfbbcd9928b5c2cfef53cb6d05dbd4d84ffd45cf324ee451c2ef8c4310ba978aba355c75a17553355939098 WHIRLPOOL 97b1eca44fdf01de7f6fe3c8fdee84135fec08797b5af6c49a3feeb27db56fcb2ec946b0c7afde53b2611c662c77dacfef89da8c8ebf4fe30625f119787784de
 EBUILD gcc-4.6.0.ebuild 1651 SHA256 0dca477aa2bbd7c2ad48cf523e0baf88f2cc1a5cecaf403b5bd49ddd1ba846b6 SHA512 39bf90478dbee693b7ce8f013c768f66c8bee863a1382bd541a7c7f4f24543429e9b23c9ff5900f8c1454988c7a100aafca21ddcb0c2904ec451401cc908e876 WHIRLPOOL 5bb95f85035c096004765fc0e207e86e29ce8b96a1a46a22b4fb936e91df150f9ce4453cac02d450675f799f6be6bd1c895e87639db8801332a571af2df4021a
 EBUILD gcc-4.6.1-r1.ebuild 1654 SHA256 334961c2fc9c66ac88c914f4a951fdd15db5e2fa70fea0f62eb761fbff4f2fcf SHA512 f187a6ee6f2cee195d2eaedd1b7a287bf21cc5a441a7e31412fcacc8690f132b527c1e0430f2a05c7101c46812cec1e57c639b303fe23af38895f3d7b1f34874 WHIRLPOOL eaaeb4ccd35bfc6d6aca366a066e9d2ae2fd2978b6978a00d61d8e97a48d1c3c07c711d6960cdcec2d63522f549f6befad23011120a7aa0ec5e1448f69075114
 EBUILD gcc-4.6.2.ebuild 1741 SHA256 b929aac0c5c2ac8009dc1fc161bd31df9899bbbe4f4fcbeb12374baf9534da96 SHA512 4ada7038c92a56f25334ff58c10d2879edf5b2c819f50d6714dc6a9f4e0866013f6bfee7e452cc3aaad45a72e34bd95ca8fe852fcafe79403b7a459a69d72bb0 WHIRLPOOL eb5a531dd434acf4145a250529eb8b83187b3b45239e58f1dbdd7bc11c92a37e67b7736543276556834a4eaeb1864b1daf05bc991d80a648e56a81998fad1a5d
-EBUILD gcc-4.6.3.ebuild 1715 SHA256 1c4fa08ea594141d17c53e5a40bea0bbf51b722a249a35655a1a833f0cd643ff SHA512 4b335262ec887a2aa5ff701c758208821852317d6c3b201f8cf2971650a5fb5a9a0c9ef38b4b257d64bc791c39ae43066d074faf1a642194376bd35124e5ff3f WHIRLPOOL 7df91421c845f1a6eec9b7743d63077ed42088cbf5f2742ae5ea47a1377e086651566a4b998b002c6a74e8224943d515e6780ea9dd0b95ccafc739de9e756cab
+EBUILD gcc-4.6.3.ebuild 1715 SHA256 e861e567fb3acbfb89b60a3d47071667050d032e5d0cf0c441be52415c7f6c95 SHA512 c2c43e611d6a468a4bd0a0960129b9631935a750b5e8aa00322e40da064321eed2c2c211d918fa3d8cb339e63c108f9d405b4cd311ffcb7242678c0b8220b9f8 WHIRLPOOL 4c241005aeef74cbdc4b6928c1b4562584aa087408d55d8c508ef67aa6eb91984af28ef03b33cace9b4369541e7d70af9d44bf0c53bd64a862862c12d39622b5
 EBUILD gcc-4.7.0.ebuild 1873 SHA256 e6c7ef28e990ab1ce70619e5e0b8a16e3a7b718251abc61cabe4b108211e4a36 SHA512 d6e634833ef2ea2566bb195c9674666b00aabeaae0631a9ae4dd1faa46163c44a8d092d1a4ac3537df65a76b86595f1392525e799ce90e2bc2364b990979f51b WHIRLPOOL f9d69bbec6dc4b5936c7e3e92829014623fddfbb59c8d6ed0be15425cf81b96188266c5b395507d3c7513409d301e051ae90069a0f7d44f566fb8e629ef6ac98
 EBUILD gcc-4.7.1.ebuild 1873 SHA256 99888b0c6e09166f3a085fa7fe05ba43f267922e237efd909ea7e76469df9d5d SHA512 b2cd479c0838f4d39e534d80450c9f1975e03a4c36bc601b345c156c083a8aaec67d7cf7e4a7420516c57e3fdf075768b7d857f89a5da813d1cf3fa76b050a49 WHIRLPOOL 1ef8c74558ffe074c35d13b8597c304e90543cfaed765ad58f74f7dfd643275712faf33298ad27218c8759a7a178da83b961b88909517b8204870a6c9462c0c5
 EBUILD gcc-4.7.2.ebuild 1874 SHA256 200cb6c6deaa4f28b61a6bde78241eebef58dc65f9fc55297b8a50d285a47f31 SHA512 3ee7f8bae3385fc2f5924d2ac72848a69e024a999160f1ac77349f8132424fb46291e0b2709936ed4f0bec40707a922b05d039da2c2b2624c21bead1a862530e WHIRLPOOL 7bc694cb2a357b3ab81183fcb72873d9a5639c13b67510bf8048babb097e70a97d34a858a9780a3d27e4600bdd422b561d06cb95a23969b53543105cef3b245f
-MISC ChangeLog 46243 SHA256 9fefac4d5d7e3874d5ceb97268a6dbf4776840fcfff210ee517d67b871ae326f SHA512 f70e5e522a4c21110d743c1a06c76cf77ec847b55b4e6f9d7fbc31c142ddf70bf4001c57dfb70df2e5074347edc1466e236495fa19762094c71e048f174b7a10 WHIRLPOOL b79752990564c7847ec53faf84b58affdbf543ba8630e449d3a72ac2720854fe30bf0ab01b06aff6036f46e10f4baa6145bb03800d5825a200d3a7ffe5a26f73
+MISC ChangeLog 46436 SHA256 5ba00441835a530b9131cbf889f1d24b73dbc373b5029b137316a474dd2abbe5 SHA512 3a9e05612329eb76949e43a37cbfcdf49a2a03a742e93c6ea3d69ed32f9e2dd7b37ee74a782fac7d1ef3b285f36bde578d684d1a315d40d6d4bb892ccdc22bd9 WHIRLPOOL 4cf02f82076f77f7a9c35a5d4e54e648de56d6925782ee169f2cce82913e43bdc12b5b701ca5c7dd1847955b6628bbc1c00c6a4b30a9a37dabc4b84630cf9f65
 MISC ChangeLog-2006 112483 SHA256 108a7803efc91b08dd27ca4a83468637222a0685760f63bce724cb486fbc4022 SHA512 2887a66d03f4e1a9c60c743d7aa22147bdd95900b9e759c760a63f1a60c90008585b10b4f46ecc26e0149427bbdb8b83a9de4546d75e9ad935dd8e5377bf8870 WHIRLPOOL a2e1df0a7cead4373b5aeda333d952407049e1945f0a4e7774e1249e9f08ee33faafe0e74adec28b641bf037b8d6a350f45760a25c15e769b23eadb84b7ea48e
 MISC metadata.xml 2017 SHA256 b8397e7ce9649b9086d020ee865f1ccd616b338cdae5be3d57494fd15748d132 SHA512 231a34104c4c0fc8f2a2733572236d7638bc9e7241a6d60b90601f24204c2a7ae5d61d351c75179dce05b4e1b7e367b9ef4f8c6d19c58d3695f5e6cb15ab519a WHIRLPOOL 01599d282637b293265f57c05a91447434d8bb33be54d6e89b8739e0f549b2045e4bc9fb6df8c7a6d0e7d6899b818b6f18454906a73edd529fc9ee57f212cce7
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iQIcBAEBCAAGBQJQ0/G7AAoJELEHsLL7fEFWRsMP/0KiGbUZTn62oy26/MXkb1un
+cDnSjR03MIvoRbNZGITXhlHtz70lsTdk6V+wf6ttZLzmG5QfRjaL705+7lkVKda0
+y8wOi57694mgDYNaNT5gtxzqGz72RovuaoodrLzlaJRH4zl0p82SnEa+Z4CdsSyq
+YO265qQHPcXopzQSy6lh5S9jTtCu6zuRVZeeGBmmaraGsuEJesIVeq1j0zYgC6h2
+i9dwzVgwwOgNn0Wtu/oFPkv+HfqDlx1TaJ1cX7+y2gK931QAJcwTK/Lpo/EVUD5V
+x3rWwn/QGRQIowi288x+dyaEdTcS0vOc0FJZH9jgO8SHsnTqU7loiIlnn1KPBmTi
+2GBVWmqrNk03Q7UvK6Z8JkdvHfNm+1gMJW5ijYFkOSUY7ZihVzv7jf9LTC5bKNSg
+hFMhCG3rPIC67qdrwHQFRznCefvfWTl8CCvBMJVrWZYYK986Ij8wnSEW4wM40v6P
+5smnkD7Cil1WvWt6SQIAR+0FdVu0VxLHtnOxLPAGQLmcp5/n3TFbrPP3U9SkeeJc
+kQWtS+Foz3jw4DYriVvD/imIl0YWwinH0nmVeFRK8XI1f7dmpRBskg4bW4eU0pcL
+J57jt3w7ykAhotlIvGVffJSNeg7ZCjcqe7EkZllpzaYpD2MtlJx97pd+aAjS2lBG
+mrF87at8n+YJG2v7jvlg
+=INiL
+-----END PGP SIGNATURE-----
