@@ -1,6 +1,11 @@
 # ChangeLog for sys-devel/gcc
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/gcc/ChangeLog,v 1.917 2012/12/11 17:39:13 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/gcc/ChangeLog,v 1.918 2012/12/21 05:20:46 vapier Exp $
+
+  21 Dec 2012; Mike Frysinger <vapier@gentoo.org> gcc-4.5.4.ebuild,
+  gcc-4.6.3.ebuild:
+  Add fix from upstream pr48226 for ppc handling of the vector keyword #445606
+  by Marcus Comstedt.
 
   11 Dec 2012; Agostino Sarubbo <ago@gentoo.org> gcc-4.4.7.ebuild,
   gcc-4.5.4.ebuild:
